<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>sdong</groupId>
		<artifactId>sdong_base</artifactId>
		<version>1.0</version>
	</parent>

	<artifactId>sdong_common</artifactId>
	<name>sdong_common</name>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<description>sdong common</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
	</properties>

	<dependencies>

	</dependencies>

</project>